# cars_api

./: .gitignore  Procfile  README.md  docker-compose.yml  env_example  pyproject.toml
app/: main.py
app/api/routes/: api.py  auth.py  cars.py  owners.py
app/api/routes/flask_routes/: api.py  cars.py  owners.py
app/core/: config.py
app/db/: database.py
app/resources/: oauth2.py  utils.py
app/schemas/: auth.py  schema.py
app/static/: app.css  bootstrap.css
app/templates/: car.html  owner.html  template.html
tests/integration/: conftest.py  database.py  test_cars.py  test_owners.py  test_users.py
