[tool.poetry]
name = "cars-api"
version = "0.1.0"
description = ""
authors = ["caiomorozini <caiomorozini@outlook.com.br>"]
readme = "README.md"
packages = [{include = "cars_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.0"}
Flask = {extras = ["async"], version = "^2.2.2"}
databases = "^0.6.1"
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.4"
flask-sqlalchemy = "2.5.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
